added config/database.js and updated server.js

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
 								<a href="clients.html">CLIENTS</a>
 								<a href="team.html">TEAM</a>
 								<a href="offices.html">OFFICES</a>
-								<a href="404.html">EXPERIMANTES</a>
+								<a href="404.html">EXPERIMENTALS</a>
 						</nav>
 						<!--script-nav -->
 						<script>
